finish first prototype

--- a/layouts/default.hbs
+++ b/layouts/default.hbs
@@ -8,14 +8,21 @@
 <body>
   <div id="cloud"></div>
   <label class="switch-light switch-candy"> 
-    <input type="checkbox" checked>
+    <input type="checkbox" checked="checked">
     <span>
        Censored 
        <span>Off</span>
        <span>On</span>
     </span>
     <a></a>
-</label>
+  </label>
+  <label class="word-frequency">
+    minWordFrequency <input class="min" value="1" type="number"></input>
+  </label>
+  <label class="word-frequency">
+    maxWordFrequency <input class="max" value="60" type="number"></input>
+  </label>
+
 {{#markdown}}
   {{> body}}
 {{/markdown}}
