--- a/app/layouts/polymer.hbs
+++ b/app/layouts/polymer.hbs
@@ -8,7 +8,7 @@
 </head>
 <title>{{ title }}</title>
 <body>
-  <div id="cloud"></div>
+  <!-- <div id="cloud"></div> -->
 
   <cth-wordcloud sourceText="test"></cth-wordcloud>
 
